# all-hies

./: .editorconfig  .gitattributes  .gitignore  Design.org  Readme.md  Readme.org  all-hies.cabal  build.nix  check-cache.sh  ci.nix  default.nix  new.nix  nixpkgs.nix  overlay.nix  shell.nix  sources.nix  update.hs  update.nix
.github/workflows/: builds.yaml
generated-new/ghc842/: pkgs.nix
generated-new/ghc843/: haskell-ide-engine.nix  pkgs.nix
generated-new/ghc844/: pkgs.nix
generated-new/ghc864/: hie-plugin-api.nix  pkgs.nix
generated-new/ghc865/: pkgs.nix
generated-new/ghc881/: pkgs.nix
generated-new/ghc882/: cabal-helper.nix  haddock-api.nix  pkgs.nix
nixpkgsForGhc/: ghc821  ghc822  ghc842  ghc843  ghc862  ghc863  ghc864  ghc865  ghc881  ghc882
overrides/: ghc821.nix  ghc842.nix  ghc843.nix
src/: Cache.hs  Main.hs  Options.hs
templates/: Readme.md
templates/haskell.nix/: all-hies-template.cabal  default.nix
templates/haskell.nix-cabal/: Main.hs  Readme.md  all-hies-template.cabal  cabal.project  default.nix
templates/haskell.nix-stack/: .gitignore  Readme.md  default.nix  stack.yaml
templates/nixpkgs-cabal/: Readme.md  default.nix
templates/nixpkgs-infra/: all-hies-template.cabal  default.nix
