cabal-version:       2.4
name:                all-hies
version:             0.1.0.0
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com

executable update
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cache
  build-depends:       base ^>=4.12.0.0
                     , haskeline
                     , process
                     , regex-applicative
                     , directory
                     , filepath
                     , stack2nix
                     , http-client
                     , http-client-tls
                     , time
                     , aeson
                     , mtl
                     , bytestring
                     , Cabal
                     , temporary
  default-language:    Haskell2010
